Update Posts “rich-content-with-mdx”

--- a/content/posts/rich-content-with-mdx.mdx
+++ b/content/posts/rich-content-with-mdx.mdx
@@ -7,7 +7,6 @@ tags:
   - style
   - mdx
 ---
-
 MDX supports to import React component and embed it directly as markdown content.
 
 ## Instagram with react-instagram-embed
@@ -30,4 +29,10 @@ MDX supports to import React component and embed it directly as markdown content
 
 <p>
   <TwitterTweetEmbed tweetId={"933354946111705097"} />
+</p>
+
+
+
+<p>
+  <SocialList />
 </p>
